add commit button, recycler view

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -20,4 +20,5 @@
     <string name="change">change</string>
     <string name="sleeping_car">sleeping car</string>
     <string name="train_brand">train brand</string>
+    <string name="add_fab">add</string>
 </resources>
