--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -24,4 +24,5 @@
     <string name="arrow">arrow</string>
     <string name="add_trip">add trip</string>
     <string name="trip_list">trip list</string>
+    <string name="comment">comment</string>
 </resources>
