--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,20 @@
     <string name="add_trip">add trip</string>
     <string name="trip_list">trip list</string>
     <string name="comment">comment</string>
+    <string name="take_photo">Take photo</string>
+    <string name="add_image_button">add image button</string>
+    <string name="take_picture_button">take picture button</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="preference_file_key">com.example.fullsteam.TOKEN</string>
+    <string name="firebase_user_uid">uid</string>
+    <string name="firebase_user_photo_uri">uri</string>
+    <string name="firebase_user_display_name">display_name</string>
 </resources>
