--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="micha_strzelczyk">Michał Strzelczyk</string>
     <string name="logout">logout</string>
     <string name="settings">settings</string>
+    <string name="edit_trip_fab">edit trip fab</string>
 </resources>
