edit page layout complete

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -37,4 +37,5 @@
     <string name="logout">logout</string>
     <string name="settings">settings</string>
     <string name="stats">stats</string>
+    <string name="save">save</string>
 </resources>
