main page statistics (total)

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -38,4 +38,5 @@
     <string name="settings">settings</string>
     <string name="stats">stats</string>
     <string name="save">save</string>
+    <string name="time_spent_in_train">Time spent in train</string>
 </resources>
