--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="edit_trip_fab">edit trip fab</string>
     <string name="stats">stats</string>
     <string name="save">save</string>
+    <string name="time_spent_in_train">Time spent in train</string>
 </resources>
