--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">Full Steam</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="trip_date">Trip date</string>
     <string name="train_number">train number</string>
@@ -15,7 +14,7 @@
     <string name="duration">duration</string>
     <string name="start_time">start time</string>
     <string name="end_time">end time</string>
-    <string name="avg_speed">avg speed</string>
+    <string name="avg_speed">average speed</string>
     <string name="price_per_km">price per km</string>
     <string name="delay">delay</string>
     <string name="pkm">PKM</string>
@@ -46,7 +45,7 @@
     <string name="firebase_user_display_name">display_name</string>
     <string name="bike_price">price</string>
     <string name="dep_delay">dep.</string>
-    <string name="arr_delay">arr</string>
+    <string name="arr_delay">arr.</string>
     <string name="login_background_image">login background image</string>
     <string name="welcome_to_full_steam">Welcome to Full Steam!</string>
     <string name="micha_strzelczyk">Michał Strzelczyk</string>
